--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sortablejs": "^1.15.0"
+  }
 }
